fix: covering pagination buttons into 'a' tag

--- a/src/components/Paginator/Paginator.scss
+++ b/src/components/Paginator/Paginator.scss
@@ -13,6 +13,10 @@ $itemDimensions: 44px;
     display: flex;
     align-items: center;
 
+    &__link {
+        text-decoration: none;
+    }
+
     &__item {
         $item: &;
 
